--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block heading %}
 <h1>Family Friendly</h1>
-<p class="centered home-subheading">Where Families Meet Up, Socialise, Discover and Have Fun Together!</p>
+<p class="centered home-subheading container">Where Families Meet Up, Socialise, Discover and Have Fun Together!</p>
 {% endblock %}
 
 {% block content %}
