--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -17,15 +17,15 @@
 
     <!-- Contact form -->
     <div class="row">
-        <div class="col s12">
-            <p class="centered">
+        <div class="col s10 offset-s1">
+            <p class="center-align">
                 To get in touch, please fill up the form, we will get back to you as soon as possible.
             </p>
         </div>
     </div>
 
     <div class="row">
-        <form id="contact-form" method="POST" class="col s12 m6 offset-m3 card-panel">
+        <form id="contact-form" method="POST" class="col s10 offset-s1 m6 offset-m3 card-panel">
             <!-- Name -->
             <div class="row padd-top">
                 <div class="input-field col s12 m10 offset-m1">
