--- a/app/templates/delete_profile.html
+++ b/app/templates/delete_profile.html
@@ -6,7 +6,7 @@
 {% block content %}
 
     <div class="row">
-        <div class="col s12 m8 offset-m2">
+        <div class="col s10 offset-s1 m8 offset-m2">
             <h3 class="warning text-shadow yellow-bg hoverable">
                 <span class="valign-wrapper red-bg yellow-txt">
                     <span class="material-icons">warning</span>
@@ -17,7 +17,8 @@
     </div>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" action="{{ url_for('users.delete_profile') }}">
+        <form method="POST" action="{{ url_for('users.delete_profile') }}"
+            class="col s10 offset-s1 m8 offset-m2 l6 offset-l3 card-panel" id="delete-profile-form">
             <!-- email -->
             <div class="row">
                 <div class="input-field col s12">
