--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -6,18 +6,18 @@
 {% block content %}
 
     <!-- Search events -->
-    <div class="row">
+    <div class="row container">
         <form action="{{ url_for('events.search_events') }}" method="POST"
-            class="col s12 m10 offset-m1 l6 offset-l3 card-panel search-card">
+            class="col s12 m10 offset-m1 card-panel search-card">
             <div class="row valign-wrapper no-margin-bot">
-                <div class="col s4 input-field">
-                    <span class="material-icons prefix">search</span>
+                <div class="col s5 input-field valign-wrapper">
+                    <span class="material-icons">search</span>
+                    <label for="query_search_events" class="label-query-search-events">Search Events</label>
                     <input type="text" name="query_search_events" id="query_search_events" class="validate"
                         minlength="2" required>
-                    <label for="query_search_events">Search Events</label>
                 </div>
                 <!-- Submit / Reset -->
-                <div class="col s6 center-align">
+                <div class="col s7 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn"
                         type="submit">Search</button>
                     <a href="{{ url_for('events.browse_events') }}"
@@ -28,36 +28,34 @@
     </div>
 
     <!-- Search by category -->
-    <div class="row">
-        <div class="row">
-            <form action="{{ url_for('events.select_events') }}" method="post"
-                class="col s12 m6 offset-m3 l4 offset-l4 card-panel search-card">
-                <div class="row valign-wrapper no-margin-bot">
-                    <div class="input-field col s4 input-field no-margin-top">
-                        <select id="event_category" name="event_category" class="validate" required>
-                            <option value="" disabled selected>Filter by Activity</option>
-                            <option value="Playground">Playground</option>
-                            <option value="Play date">Play date</option>
-                            <option value="Cycling">Cycling</option>
-                            <option value="Hike">Hike</option>
-                            <option value="Swimming">Swimming</option>
-                            <option value="Picnic">Picnic</option>
-                            <option value="Walk">Walk</option>
-                            <option value="Coffee">Coffee</option>
-                            <option value="Other">Other</option>
-                        </select>
-                        <label for="event_category"></label>
-                    </div>
-                    <!-- Submit / Reset -->
-                    <div class="col s8 center-align">
-                        <button class="btn waves-effect waves-light blue-bg white-txt submit-btn small-btn"
-                            type="submit">Apply</button>
-                        <a href="{{ url_for('events.browse_events') }}"
-                            class="btn waves-effect waves-light red-bg white-txt cancel-btn small-btn">Reset</a>
-                    </div>
+    <div class="row container">
+        <form action="{{ url_for('events.select_events') }}" method="post"
+            class="col s12 m8 offset-m2 card-panel search-card">
+            <div class="row valign-wrapper no-margin-bot">
+                <div class="input-field col s5 input-field no-margin-top">
+                    <select id="event_category" name="event_category" class="validate" required>
+                        <option value="" disabled selected>Filter by Activity</option>
+                        <option value="Playground">Playground</option>
+                        <option value="Play date">Play date</option>
+                        <option value="Cycling">Cycling</option>
+                        <option value="Hike">Hike</option>
+                        <option value="Swimming">Swimming</option>
+                        <option value="Picnic">Picnic</option>
+                        <option value="Walk">Walk</option>
+                        <option value="Coffee">Coffee</option>
+                        <option value="Other">Other</option>
+                    </select>
+                    <label for="event_category"></label>
                 </div>
-            </form>
+                <!-- Submit / Reset -->
+                <div class="col s7 center-align">
+                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn small-btn"
+                        type="submit">Apply</button>
+                    <a href="{{ url_for('events.browse_events') }}"
+                        class="btn waves-effect waves-light red-bg white-txt cancel-btn small-btn">Reset</a>
+                </div>
             </div>
+        </form>
     </div>
 
     {% if events_list|length > 0 %}
@@ -70,11 +68,11 @@
                             <!-- Collapsible Header -->
                             <div class="row collapsible-header no-margin-bot">
                                 <!-- Category -->
-                                <div class="col s7">
+                                <div class="col s5">
                                     <p class="events-card-titles">{{ event.event_category }}</p>
                                 </div>
                                 <!-- Date -->
-                                <div class="col s5">
+                                <div class="col s7">
                                     <p class="events-card-descriptions">{{ event.event_date }}</p>
                                 </div>
                                 <!-- Likes -->
@@ -91,7 +89,7 @@
                             </div>
                             <!-- Collapsible Body -->
                             <div class="row collapsible-body">
-                                <form action="{{ url_for('events.see_event') }}" method="POST" class="############">
+                                <form action="{{ url_for('events.see_event') }}" method="POST">
                                     <!-- Hidden input to get the event id -->
                                     <div class="hide">
                                         <input id="event_id" name="event_id" value="{{ event._id }}" type="text">
