--- a/app/templates/update_event.html
+++ b/app/templates/update_event.html
@@ -27,7 +27,7 @@
                             <option value="Coffee">Coffee</option>
                             <option value="Other">Other</option>
                         </select>
-                        <label for="event_category">Activity</label>
+                        <label for="event_category">Activity <span id="select-caret">&#10550;</span></label>
                     </div>
                 </div>
                 <!-- Location -->
