--- a/app/templates/events.html
+++ b/app/templates/events.html
@@ -33,8 +33,8 @@
             class="col s12 m8 offset-m2 card-panel search-card">
             <div class="row valign-wrapper no-margin-bot">
                 <div class="input-field col s5 input-field no-margin-top">
-                    <select id="event_category" name="event_category" class="validate" required>
-                        <option value="" disabled selected>Filter by Activity</option>
+                    <select id="event_category" name="event_category" class="validate position-rel" required>
+                        <option value="" disabled selected>Filter by Activity </option>
                         <option value="Playground">Playground</option>
                         <option value="Play date">Play date</option>
                         <option value="Cycling">Cycling</option>
@@ -45,7 +45,7 @@
                         <option value="Coffee">Coffee</option>
                         <option value="Other">Other</option>
                     </select>
-                    <label for="event_category"></label>
+                    <label for="event_category"><span id="select-caret">&#10550;</span></label>
                 </div>
                 <!-- Submit / Reset -->
                 <div class="col s7 center-align">
