Change the file size upload for the profile picture

--- a/app/templates/update_picture.html
+++ b/app/templates/update_picture.html
@@ -34,7 +34,7 @@
                                 <span class="helper-text valign-wrapper">
                                     <span class="material-icons">error_outline</span>
                                     Only .png files are accepted<br>
-                                    File size must be between 2-6 MB
+                                    File size must be between 2 KB and 6 MB
                                 </span>
                             </div>
                         </div>
