--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -77,6 +77,7 @@
                                 alt="Default profile picture representing a smiling sunflower." height="90" width="90">
                         {% endif %}
                     </a>
+                    <p class="center-align change-mobile-profile-image">Change your picture by clicking on the image.</p>
                 </div>
                 <!-- Personal info -->
                 <div class="card-content">
@@ -105,6 +106,9 @@
                     <a href="{{ url_for('users.change_password', user_id=user._id) }}">Change password</a>
                 </div>
             </div>
+        </div>
+        <div class="col s10 offset-s1 center-align">
+            <p class="center-align change-profile-image centered">Change your picture by clicking on the image.</p>
         </div>
     </div>
     <!-- Display events created by user -->
