Add privacy policy

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -167,7 +167,7 @@
                     {% endif %}
                 </div>
                 <div class="third-div center-align">
-                    <a class="privacy-policy text-shadow" href="#!"
+                    <a class="privacy-policy text-shadow" href="{{ url_for('footer.privacy_policy') }}"
                         aria-label="Link to the Privacy Policy page.">Privacy Policy</a>
                 </div>
                 <div class="third-div center-align copyright">
